增加Canal工具支持 日志输出增加线程名称及线程Id PersistenceObject调整 补充Transcoder 去除xstream