@@ -1,12 +1,15 @@
 package com.aio.portable.swiss.suite.log.support;
 
+import com.aio.portable.swiss.suite.log.facade.LogHub;
 import com.aio.portable.swiss.suite.log.factory.LogHubFactory;
 import com.aio.portable.swiss.suite.resource.ClassSugar;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
+import org.springframework.beans.factory.support.RootBeanDefinition;
 import org.springframework.context.annotation.ScannedGenericBeanDefinition;
 import org.springframework.core.type.AnnotationMetadata;
+import org.springframework.core.type.classreading.MethodMetadataReadingVisitor;
 
 import java.util.Objects;
 
@@ -35,9 +38,9 @@ public class LogHubUtils {
                 AnnotationMetadata metadata = scannedGenericBeanDefinition.getMetadata();
                 if (metadata != null && metadata.getSuperClassName() != null && ClassSugar.isSuper(LogHubFactory.class, metadata.getSuperClassName())) {
                     try {
-                        final Class<?> clazz = scannedGenericBeanDefinition.resolveBeanClass(Thread.currentThread().getContextClassLoader());
-                        clazz.newInstance();
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                        Class<?> clazz = scannedGenericBeanDefinition.resolveBeanClass(Thread.currentThread().getContextClassLoader());
+                        clazz.getConstructor().newInstance();
+                    } catch (Exception e) {
                         e.printStackTrace();
                         throw new RuntimeException(e);
                     }
@@ -56,11 +59,17 @@ public class LogHubUtils {
                 if (metadata != null && metadata.getSuperClassName() != null && ClassSugar.isSuper(LogHubFactory.class, metadata.getSuperClassName())) {
                     try {
                         final Class<?> clazz = scannedGenericBeanDefinition.resolveBeanClass(Thread.currentThread().getContextClassLoader());
-                        clazz.newInstance();
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                        clazz.getConstructor().newInstance();
+                    } catch (Exception e) {
                         e.printStackTrace();
                         throw new RuntimeException(e);
                     }
+                }
+            } else if (definition.getFactoryMethodName() != null && definition.getSource() instanceof MethodMetadataReadingVisitor) {
+                String superClassName = ((MethodMetadataReadingVisitor) definition.getSource()).getReturnTypeName();
+                if (ClassSugar.isSuper(LogHubFactory.class, superClassName)) {
+                    LogHubFactory logHubFactory = new LogHubFactory() {};
+
                 }
             }
         }
